Added styles.css and updated HTML

--- a/BlogSite/src/main/resources/templates/login.html
+++ b/BlogSite/src/main/resources/templates/login.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h1>Bloggie Blogster Blog App</h1>
 
+<!-- action_page.php below is placeholder -->
+<form action="action_page.php" method="post">
+  <div class="imgcontainer">
+    <img src="img_avatar.png" alt="avatar" class="avatar">
+  </div>
+
 <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input title="Enter Username" type="text"  name="uname" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input title="Enter Password" type="password" name="psw" required>
 
     <button type="submit">Login</button>
     <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
-</div>
+  </div>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#"> password?</a></span>
+  </div>
+</form>
 
 
 </body>
