--- a/BlogSite/src/main/resources/templates/login.html
+++ b/BlogSite/src/main/resources/templates/login.html
@@ -3,10 +3,10 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ben and Roy's Blog Site</title>
 </head>
 <body>
-<h1>Bloggie Blogster Blog App</h1>
+<h1>Bloggie Blogster App</h1>
 
 <!-- action_page.php below is placeholder -->
 <form action="action_page.php" method="post">
